# wx_ai

./: Cargo.toml  README.md
src/: main.rs
src/ai_handler/: http_client.rs  mod.rs  openai.rs  openai_struct.rs  text_handler.rs
src/env_handle/: env.rs
src/wx_data/: mod.rs  msg_handler.rs  msg_struct.rs
src/wx_verify/: access_token.rs  mod.rs  verify_token.rs
