[package]
name = "wx_ai"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.9.0"
chrono = "0.4.39"
crypto = "0.5.1"
env_logger = "0.11.6"
log = { version = "0.4.26", features = [] }
serde = { version = "1.0.218", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["full"] }
